# ikea-sna

./: .gitignore  README.md  catnames.json  cats.json  config.py  main.py  pyproject.toml
convertors/: json_conv.py  xlsx_conv.py
core/: categories.py  category.py  parsers.py  process.py  products.py  sessions.py
core/parsing/: categories.py  products.py
core/translation/: datafile.py
events/: decorators.py
output/Furniture/fu003/: products.json
utils/: client.py  dirs.py  json.py  translate.py  translators.py
