[tool.poetry]
name = "ikea-sna"
version = "0.1.0"
description = ""
authors = ["Max iamzhv@gmail.com"]
readme = "README.md"
packages = [{include = "ikea_sna"}]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.1"
httpx = "^0.23.3"
bs4 = "^0.0.1"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
